tests/specs/ecosystem/jesubohr/hotkeypad/0_1_22.test
jesubohr/hotkeypad/0.1.22
-- deno.lock --
{
  "version": "3",
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
TS2304 [ERROR]: Cannot find name 'HTMLElement'.
  /** The instance of the hotkeypad on the DOM */ declare instance: HTMLElement;
                                                                    ~~~~~~~~~~~
    at file://<tmpdir>/src/mod.ts:30:69

error: Type checking failed.

